--- a/index.html
+++ b/index.html
@@ -476,13 +476,13 @@
     <!-- Contact Form Ends -->
 
     <!-- Footer Starts -->
-    <footer class="footer">
+    <footer class="footer background-primary position-relative">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="footer__logo">
+                    <div class="footer__logo position-absolute">
                         <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo" class="img-fluid">
-                        <p>
+                        <p class="font-futura text-white text-uppercase text-center">
                             Plastic Surgery
                             <br>
                             of New york
@@ -491,16 +491,16 @@
                 </div>
             </div>
             <div class="row footer__menu">
-                <div class="col-md-2 menu">
-                    <p>About us</p>
+                <div class="col-lg-2 col-sm-3 col-6 menu">
+                    <p class="text-uppercase font-TTNorms">About us</p>
                     <ul>
                         <li><a href="#">Our Team</a></li>
-                        <li><a href="#"></a>Our Practices</li>
+                        <li><a href="#">Our Practices</a></li>
                         <li><a href="#">Our Philosophy</a></li>
                     </ul>
                 </div>
-                <div class="col-md-2 menu">
-                    <p>Surgical</p>
+                <div class="col-lg-2 col-sm-3 col-6 menu">
+                    <p class="text-uppercase font-TTNorms">Surgical</p>
                     <ul>
                         <li><a href="#">Breast</a></li>
                         <li><a href="#">Face</a></li>
@@ -509,8 +509,8 @@
                         <li><a href="#">Hair</a></li>
                     </ul>
                 </div>
-                <div class="col-md-2 menu">
-                    <p>non-surgical</p>
+                <div class="col-lg-2 col-sm-3 col-6 menu">
+                    <p class="text-uppercase font-TTNorms">non-surgical</p>
                     <ul>
                         <li><a href="#">Aesthesics</a></li>
                         <li><a href="#">Skincare</a></li>
@@ -519,14 +519,14 @@
                         <li><a href="#">Laser</a></li>
                     </ul>
                 </div>
-                <div class="col-md-2 menu">
-                    <p>contact</p>
+                <div class="col-lg-2 col-sm-3 col-6 menu">
+                    <p class="text-uppercase font-TTNorms">contact</p>
                     <ul>
                         <li><a href="#">Contact us</a></li>
                         <li><a href="#">Book now</a></li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4 col-sm-12">
                     <div class="footer__socials">
                         <div class="cell-info">
                             <span>CALL US</span>
@@ -558,7 +558,7 @@
                             </div>
                         </div>
                         <div class="mail-info">
-                            <span>mail us</span>
+                            <span class="d-block">mail us</span>
                             <a href="mailto:info@psofny.com">INFO@PSOFNY.COM</a>
                         </div>
                     </div>
@@ -568,7 +568,7 @@
                 <div class="col-6">
                     <p>&copy; 2020 psny</p>
                 </div>
-                <div class="col-6">
+                <div class="col-6 text-end">
                     <a href="#">Terms of use</a> |
                     <a href="#">Privacy Policy</a>
                 </div>
