Fixed footer issues on mobile devices

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                         <li><a href="#">Book now</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-lg-4 col-sm-12 d-flex justify-content-end">
                     <div class="footer__socials">
                         <div class="cell-info">
                             <span>CALL US</span>
