Changes on sticky menu, removed header effect & fixed contact form

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="position-fixed left-0 top-0 w-100 header">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <div class="d-flex align-items-center animated fadeInLeft">
+                <div class="d-flex align-items-center">
                     <a class="navbar-brand" href="#">
                         <img src="assets/images/logo.png" alt="PSNY Logo" class="img-fluid">
                     </a>
@@ -36,7 +36,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 animated fadeInRight">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link font-futura color-primary text-uppercase" aria-current="page" href="#">About us</a>
                         </li>
@@ -57,6 +57,9 @@
                         </li>
                     </ul>
                 </div>
+                <p class="d-flex mb-0 d-none d-lg-block header-text">
+                    855-PSNY-123
+                </p>
             </div>
         </nav>
     </header>
@@ -457,7 +460,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 form animated wow fadeInLeft">
+                        <div class="col-lg-6 col-md-12 form animated wow fadeInLeft">
                             <p class="font-futura">Ask us a question</p>
                             <form>
                                 <div class="form-floating mb-3">
@@ -494,7 +497,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="col-md-6 justify-content-end d-flex">
+                        <div class="col-lg-6 col-md-12 justify-content-end d-flex">
                             <img src="assets/images/home/form.png" alt="Form Image"  class="form-img animated wow fadeInRight">
                         </div>
                     </div>
