Worked on responsivness

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="navbar-brand" href="#">
                         <img src="assets/images/logo.png" alt="PSNY Logo" class="img-fluid">
                     </a>
-                    <span class="font-futura color-primary text-uppercase brand-text">
+                    <span class="font-futura color-primary text-uppercase brand-text d-none d-md-block">
                         Plastic Surgery
                         <br>
                         of New york
