Added dropdown removed sticky nav

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- Header Starts -->
-    <header class="position-fixed left-0 top-0 w-100 header">
+    <header class="position-absolute left-0 top-0 w-100 header">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <div class="d-flex align-items-center">
@@ -52,8 +52,16 @@
                         <li class="nav-item">
                             <a class="nav-link font-futura color-primary text-uppercase" href="#">cONTACT</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" href="#">855-PSNY-123</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Dropdown 
+                            </a>
+                            <ul class="dropdown-menu level-one" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
