Completed team page structure and css

--- a/index.html
+++ b/index.html
@@ -503,6 +503,9 @@
                                         id="floatingTextarea"></textarea>
                                     <label for="floatingTextarea">How can we help you?</label>
                                 </div>
+                                <div class="form-btn">
+                                    <button class="btn button-primary">Submit</button>
+                                </div>
                             </form>
                         </div>
                         <div class="col-lg-6 col-md-12 justify-content-end d-flex">
