Added banner bottom section

--- a/team.html
+++ b/team.html
@@ -105,6 +105,20 @@
     </section>
     <!-- Banner Ends -->
 
+    <!-- Banner Bottom Starts -->
+    <section class="banner-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="banner-bottom__inner">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Banner Bottom Ends -->
+
     <!-- Team Starts -->
     <section class="team">
         <div class="container">
