--- a/team.html
+++ b/team.html
@@ -246,7 +246,7 @@
                 </div>
             </div>
             
-            <div class="row wow animated wow fadeInUp team-row">
+            <div class="row wow animated wow fadeInUp team-row pb-0 border-0">
                 <div class="col-lg-5 col-md-12">
                     <div class="team__image">
                         <img src="/assets/images/team/teamPlaceholder.png" alt="team member" srcset="" class="img-fluid">
