--- a/philosophy.html
+++ b/philosophy.html
@@ -72,7 +72,7 @@
     <!-- Header Ends -->
 
     <!-- Banner Starts -->
-    <section class="banner team-banner">
+    <section class="banner philosophy-banner">
         <div class="container">
             <div class="row">
                 <div class="notice-inner">
@@ -97,7 +97,7 @@
             <div class="row">
                 <div class="col-12">
                     <h2 class="subpage-banner__title color-primary mb-0 font-futura animated wow fadeIn">
-                        Gallery
+                        Our Philosophy
                     </h2>
                 </div>
             </div>
@@ -119,56 +119,45 @@
     </section>
     <!-- Banner Bottom Ends -->
 
-    <!-- Gallery Starts -->
-    <section class="gallery">
+    <!-- Philosophy Section Starts -->
+    <section class="philosophy">
         <div class="container">
-            <div class="row wow animated fadeInUp">
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-            </div>
-            <div class="row wow animated fadeInUp">
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-            </div>
-            <div class="row wow animated fadeInUp">
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="philosophy-inner">
+                        <p class="title">Understanding</p>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
+                        </p>
+                        <p class="title">Aesthetics</p>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
+                        </p>
+                        <p class="title">Precision</p>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
+                        </p>
+                        <div>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row wow animated fadeInUp">
-                <div class="col-md-4">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-                <div class="col-md-4">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-                <div class="col-md-4">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
+            <div class="row">
+                <div class="col">
+                    <div class="team__btns wow animated wow fadeInUp">
+                        <button class="btn button-secondary">
+                            Our Practices
+                        </button>
+                        <button class="btn button-secondary">
+                            Our Team
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Gallery Ends -->
+    <!-- Philosophy Section Ends -->
 
     <!-- Contact Form Starts -->
     <section class="contact-form team-contact-form">
