Restructured team page

--- a/philosophy.html
+++ b/philosophy.html
@@ -15,14 +15,14 @@
 </head>
 <body>
     <!-- Header Starts -->
-    <header class="position-absolute left-0 top-0 w-100 header">
+    <header class="header">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <div class="d-flex align-items-center">
-                    <a class="navbar-brand" href="#">
+                <div class="d-flex align-items-center navbar-brand">
+                    <a class="" href="#">
                         <img src="assets/images/logo.png" alt="PSNY Logo" class="img-fluid">
                     </a>
-                    <span class="font-futura color-primary text-uppercase brand-text d-none d-md-block">
+                    <span class="font-futura color-primary text-uppercase d-none d-md-block">
                         Plastic Surgery
                         <br>
                         of New york
@@ -45,7 +45,7 @@
                             <a class="nav-link font-futura color-primary text-uppercase" href="#">Non-Surgical</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active font-futura color-primary text-uppercase" href="#">Gallery</a>
+                            <a class="nav-link font-futura color-primary text-uppercase" href="#">Gallery</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link font-futura color-primary text-uppercase" href="#">cONTACT</a>
@@ -63,7 +63,7 @@
                         </li>
                     </ul>
                 </div>
-                <p class="d-flex mb-0 d-none d-lg-block header-text">
+                <p class="d-flex mb-0 d-none d-lg-block">
                     855-PSNY-123
                 </p>
             </div>
@@ -76,15 +76,15 @@
         <div class="container">
             <div class="row">
                 <div class="notice-inner">
-                    <div class="col d-flex  animated wow fadeIn">
-                        <svg class="notice-icon animated fadeIn" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <div class="col d-flex animated wow fadeIn">
+                        <svg class="animated fadeIn" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M7.38346 10.5303L7.07519 4H8.92481L8.61654 10.5303H7.38346ZM9 12.1829C9 12.4058 8.90226 12.5977 8.69925 12.7586C8.50376 12.9195 8.27068 13 8 13C7.73684 13 7.50376 12.9195 7.30075 12.7586C7.10526 12.5977 7 12.4058 7 12.1829C7 11.9601 7.10526 11.7682 7.30075 11.6011C7.50376 11.4402 7.73684 11.3535 8 11.3535C8.27068 11.3535 8.50376 11.4402 8.69925 11.6011C8.90226 11.7682 9 11.9601 9 12.1829Z"
                                 fill="#EB5757" />
                             <circle cx="8" cy="8" r="7.65" stroke="#EB5757" stroke-width="0.7" />
                         </svg>
                         <div class="notice animated fadeIn">
-                            <p class="font-TTNorms color-primary mb-0">
+                            <p>
                                 we're are opened.
                                 <br>
                                 we're supporting you.
@@ -234,23 +234,23 @@
     <!-- Contact Form Ends -->
 
     <!-- Footer Starts -->
-    <footer class="footer background-primary position-relative">
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div class="footer__logo position-absolute">
                         <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo" class="img-fluid animated wow fadeInUp">
-                        <p class="font-futura text-white text-uppercase text-center animated wow fadeInUp">
+                        <span class="animated wow fadeInUp">
                             Plastic Surgery
                             <br>
                             of New york
-                        </p>
+                        </span>
                     </div>
                 </div>
             </div>
             <div class="row footer__menu">
                 <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
-                    <p class="text-uppercase font-TTNorms">About us</p>
+                    <p>About us</p>
                     <ul>
                         <li><a href="#">Our Team</a></li>
                         <li><a href="#">Our Practices</a></li>
@@ -258,7 +258,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
-                    <p class="text-uppercase font-TTNorms">Surgical</p>
+                    <p>Surgical</p>
                     <ul>
                         <li><a href="#">Breast</a></li>
                         <li><a href="#">Face</a></li>
@@ -268,7 +268,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
-                    <p class="text-uppercase font-TTNorms">non-surgical</p>
+                    <p>non-surgical</p>
                     <ul>
                         <li><a href="#">Aesthesics</a></li>
                         <li><a href="#">Skincare</a></li>
@@ -278,7 +278,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
-                    <p class="text-uppercase font-TTNorms">contact</p>
+                    <p>contact</p>
                     <ul>
                         <li><a href="#">Contact us</a></li>
                         <li><a href="#">Book now</a></li>
@@ -316,7 +316,7 @@
                             </div>
                         </div>
                         <div class="mail-info">
-                            <span class="d-block">mail us</span>
+                            <span>mail us</span>
                             <a href="mailto:info@psofny.com">INFO@PSOFNY.COM</a>
                         </div>
                     </div>
