Re structured philosophy page

--- a/gallery.html
+++ b/gallery.html
@@ -72,7 +72,7 @@
     <!-- Header Ends -->
 
     <!-- Banner Starts -->
-    <section class="banner team-banner">
+    <section class="banner__subpage team-banner">
         <div class="container">
             <div class="row">
                 <div class="notice-inner">
@@ -110,9 +110,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="banner-bottom__inner">
+                    <p class="wow animated fadeInUp">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. 
-                    </div>
+                    </p>
                 </div>
             </div>
         </div>
@@ -171,17 +171,17 @@
     <!-- Gallery Ends -->
 
     <!-- Contact Form Starts -->
-    <section class="contact-form team-contact-form">
+    <section class="contact-form">
         <div class="container">
             <div class="row align-items-center">
                 <div class="contact-form__inner">
                     <div class="row booking position-relative">
                         <div class="col-xl-4 col-xxl-6 col-lg-4 col-md-12">
-                            <p class="contact-form__title font-Audrey color-primary mb-0 animated wow fadeInLeft">Contact</p>
+                            <h2 class="animated wow fadeInLeft">Contact</h2>
                         </div>
                         <div class="col-xl-8 col-xxl-6 col-lg-8 col-md-12">
                             <div class="contact-form__info position-relative">
-                                <div class="d-flex justify-content-between align-items-center flex-column flex-md-row animated wow fadeInRight">
+                                <div class="animated wow fadeInRight">
                                     <button class="btn button-secondary">
                                         Book Now
                                     </button>
@@ -229,13 +229,11 @@
                                         id="floatingTextarea"></textarea>
                                     <label for="floatingTextarea">How can we help you?</label>
                                 </div>
-                                <div class="form-btn">
-                                    <button class="btn button-primary">Submit</button>
-                                </div>
+                                <button class="btn button-primary">Submit</button>
                             </form>
                         </div>
                         <div class="col-lg-6 col-md-12 justify-content-end d-flex">
-                            <img src="assets/images/home/form.png" alt="Form Image"  class="form-img animated wow fadeInRight">
+                            <img src="assets/images/home/form.png" alt="Form Image"  class="animated wow fadeInRight">
                         </div>
                     </div>
                 </div>
