--- a/philosophy.html
+++ b/philosophy.html
@@ -72,7 +72,7 @@
     <!-- Header Ends -->
 
     <!-- Banner Starts -->
-    <section class="banner philosophy-banner">
+    <section class="banner__subpage philosophy-banner">
         <div class="container">
             <div class="row">
                 <div class="notice-inner">
@@ -96,7 +96,7 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <h2 class="subpage-banner__title color-primary mb-0 font-futura animated wow fadeIn">
+                    <h2 class="animated wow fadeIn">
                         Our Philosophy
                     </h2>
                 </div>
@@ -110,9 +110,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="banner-bottom__inner">
+                    <p class="wow animated fadeInUp">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. 
-                    </div>
+                    </p>
                 </div>
             </div>
         </div>
@@ -125,18 +125,21 @@
             <div class="row">
                 <div class="col-12">
                     <div class="philosophy-inner">
-                        <p class="title">Understanding</p>
+                        <h2 class="title">Understanding</h2>
                         <p class="description">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
                         </p>
-                        <p class="title">Aesthetics</p>
+
+                        <h2 class="title">Aesthetics</h2>
                         <p class="description">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
                         </p>
-                        <p class="title">Precision</p>
+
+                        <h2 class="title">Precision</h2>
                         <p class="description">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
                         </p>
+                        
                         <div>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
                         </div>
@@ -145,7 +148,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="team__btns wow animated wow fadeInUp">
+                    <div class="btns_group wow animated wow fadeInUp">
                         <button class="btn button-secondary">
                             Our Practices
                         </button>
@@ -160,17 +163,17 @@
     <!-- Philosophy Section Ends -->
 
     <!-- Contact Form Starts -->
-    <section class="contact-form team-contact-form">
+    <section class="contact-form">
         <div class="container">
             <div class="row align-items-center">
                 <div class="contact-form__inner">
                     <div class="row booking position-relative">
                         <div class="col-xl-4 col-xxl-6 col-lg-4 col-md-12">
-                            <p class="contact-form__title font-Audrey color-primary mb-0 animated wow fadeInLeft">Contact</p>
+                            <h2 class="animated wow fadeInLeft">Contact</h2>
                         </div>
                         <div class="col-xl-8 col-xxl-6 col-lg-8 col-md-12">
                             <div class="contact-form__info position-relative">
-                                <div class="d-flex justify-content-between align-items-center flex-column flex-md-row animated wow fadeInRight">
+                                <div class="animated wow fadeInRight">
                                     <button class="btn button-secondary">
                                         Book Now
                                     </button>
@@ -218,13 +221,11 @@
                                         id="floatingTextarea"></textarea>
                                     <label for="floatingTextarea">How can we help you?</label>
                                 </div>
-                                <div class="form-btn">
-                                    <button class="btn button-primary">Submit</button>
-                                </div>
+                                <button class="btn button-primary">Submit</button>
                             </form>
                         </div>
                         <div class="col-lg-6 col-md-12 justify-content-end d-flex">
-                            <img src="assets/images/home/form.png" alt="Form Image"  class="form-img animated wow fadeInRight">
+                            <img src="assets/images/home/form.png" alt="Form Image"  class="animated wow fadeInRight">
                         </div>
                     </div>
                 </div>
