--- a/team.html
+++ b/team.html
@@ -72,7 +72,7 @@
     <!-- Header Ends -->
 
     <!-- Banner Starts -->
-    <section class="banner-subpage team-banner">
+    <section class="banner__subpage team-banner">
         <div class="container">
             <div class="row">
                 <div class="notice-inner">
