Restructured gallery and added lightbox

--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,8 @@
 
     <!-- Animate CSS -->
     <link rel="stylesheet" href="assets/vendors/animate-css/animate.css">
+    <!-- Lightbox CSS -->
+    <link rel="stylesheet" href="assets/vendors/lightbox/lightbox.min.css">
     <!-- Boostrap -->
     <link rel="stylesheet" href="assets/vendors/bootstrap/bootstrap.min.css">
     <!-- Main Stylesheet -->
@@ -123,47 +125,71 @@
     <section class="gallery">
         <div class="container">
             <div class="row wow animated fadeInUp">
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
+                <div class="col-md-4">
+                    <a href="/assets/images/gallery/item01.jpg" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="img-fluid example-image">
+                    </a>
                 </div>
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
+                <div class="col-md-4">
+                    <a href="/assets/images/gallery/placeholder.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="/assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
+                    </a>
                 </div>
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-            </div>
-            <div class="row wow animated fadeInUp">
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-            </div>
-            <div class="row wow animated fadeInUp">
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
-                </div>
-                <div class="col-md-4 ">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
+                <div class="col-md-4">
+                    <a href="/assets/images/gallery/placeholder.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="/assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
+                    </a>
                 </div>
             </div>
             <div class="row wow animated fadeInUp">
                 <div class="col-md-4">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
+                    <a href="/assets/images/gallery/item02.jpg" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="/assets/images/gallery/item02.jpg" alt="gallery item" class="img-fluid example-image">
+                    </a>
                 </div>
                 <div class="col-md-4">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
+                    <a href="/assets/images/gallery/placeholder.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="/assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
+                    </a>
                 </div>
                 <div class="col-md-4">
-                    <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="gallery__image img-fluid">
+                    <a href="/assets/images/gallery/item03.jpg" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="/assets/images/gallery/item03.jpg" alt="gallery item" class="img-fluid example-image">
+                    </a>
+                </div>
+            </div>
+            <div class="row wow animated fadeInUp">
+                <div class="col-md-4">
+                    <a href="/assets/images/gallery/placeholder.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="/assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="/assets/images/gallery/item04.jpg" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="/assets/images/gallery/item04.jpg" alt="gallery item" class="img-fluid example-image">
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="/assets/images/gallery/item05.jpg" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="/assets/images/gallery/item05.jpg" alt="gallery item" class="img-fluid example-image">
+                    </a>
+                </div>
+            </div>
+            <div class="row wow animated fadeInUp">
+                <div class="col-md-4">
+                    <a href="/assets/images/gallery/item06.jpg" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="/assets/images/gallery/item06.jpg" alt="gallery item" class="img-fluid example-image">
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="/assets/images/gallery/item07.jpg" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="/assets/images/gallery/item07.jpg" alt="gallery item" class="img-fluid example-image">
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="/assets/images/gallery/placeholder.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="/assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
+                    </a>
                 </div>
             </div>
         </div>
@@ -346,6 +372,9 @@
 
     <!-- WOW JS -->
     <script src="assets/vendors/wow-js/wow.min.js"></script>
+    <!-- Lightbox JS -->
+    <script src="assets/vendors/lightbox/lightbox.min.js"></script>
+    <script src="assets/vendors/lightbox/lightbox-plus-jquery.min.js"></script>
     <!-- Main Script -->
     <script src="assets/js/app.js"></script>
 </body>
