--- a/philosophy.html
+++ b/philosophy.html
@@ -125,22 +125,22 @@
             <div class="row">
                 <div class="col-12">
                     <div class="philosophy-inner">
-                        <h2 class="title">Understanding</h2>
-                        <p class="description">
+                        <h2 class="title wow animated fadeInUp">Understanding</h2>
+                        <p class="description wow animated fadeInUp">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
                         </p>
 
-                        <h2 class="title">Aesthetics</h2>
-                        <p class="description">
+                        <h2 class="title wow animated fadeInUp">Aesthetics</h2>
+                        <p class="description wow animated fadeInUp">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
                         </p>
 
-                        <h2 class="title">Precision</h2>
-                        <p class="description">
+                        <h2 class="title wow animated fadeInUp">Precision</h2>
+                        <p class="description wow animated fadeInUp">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
                         </p>
-                        
-                        <div>
+
+                        <div class="wow animated fadeInUp">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
                         </div>
                     </div>
